<resources>
    <string name="app_name">听霸</string>
    <string name="str_nav_title">听霸</string>
    <string name="str_nav_frient">找好友</string>
    <string name="str_nav_me">我</string>
    <string name="str_nav_find">发现</string>
    <string name="str_nav_record">排行榜</string>
    <string name="str_nav_game">游戏中心</string>
    <string name="str_nav_pk">比赛</string>
    <string name="str_nav_home">首页</string>
    <string name="str_nav_friends">朋友们</string>
    <string name="str_nav_local_city">苏州</string>
    <string name="str_nav_china">全国</string>
    <string name="hottest_left">朋友们</string>
    <string name="hottest_middle">贵州</string>
    <string name="hottest_right">全国</string>
    <string name="nav">导航</string>
    <string name="default_area">苏州</string>
    <string name="str_listen_word">猜单词</string>
    <string name="str_listen_picture">猜图片</string>
    <string name="str_listen_world">听世界</string>
    <string name="cancel">取消</string>
    <string name="loginfirst">请先登录</string>
    <string name="qqlogin">QQ登录</string>
    <string name="sinalogin">微博登录</string>
    <string name="renrenlogin">人人网登录</string>
    <string name="account">听霸账号</string>
    <string name="new_passwd">新密码</string>
    <string name="confirm_passwd">确认密码</string>
    <string name="youremail">你的邮箱</string>
    <string name="password">密　　码</string>
    <string name="login">登录</string>
    <string name="register_name_digits">._-@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="register_name_hint_text">你的邮箱</string>
    <string name="locating">正在定位…</string>
    <string name="search_district_footer">每个区域都是完全分离的，独立计算榜单，不会相互包含(如广州和广东是两个完全不同的榜单)，更多城市陆续开放中，敬请期待</string>
    <string name="selectcity">选择你要进入的区域</string>
    <string name="search_district">地区名、拼音首字母</string>
    <string name="invite_dialog_tittle">请输入Invite参数</string>
    <string name="source">source:</string>
    <string name="source_hint">Input Source</string>
    <string name="picurl">picurl:</string>
    <string name="picurl_hint">Input Picture Url</string>
    <string name="desc">desc:</string>
    <string name="desc_hint">Input description</string>
    <string name="commit">Commit</string>
    <string name="openid_hint">Input openid</string>
    <string name="openid">receiver:</string>
    <string name="act">act:</string>
    <string name="pk_brag_dialog_tittle">请输入挑战炫耀参数</string>
    <string name="title">title:</string>
    <string name="title_hint">Input story title</string>
    <string name="options">act:</string>
    <string name="options1">挑战</string>
    <string name="options2">炫耀</string>
    <string name="img">img:</string>
    <string name="img_hint">请输入图片URL</string>
    <string name="msg">msg:</string>
    <string name="msg_hint">请输入msg</string>
	<string name="new_tv">新</string>
	<string name="check_record">合成录音后，如果发现伴奏和你的声音不同步或有延迟，建议你请开启这个选项</string>
	<string name="question1"><a href=""><u>Maybe you should</u>on my face</a></string>
	<string
		name="poster">讯飞语音 沟通无限</string>
	<string
		name="text_tts_demo">语音合成</string>
	<string
		name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”、“国家规划布局内重点软件企业”、“国家火炬计划重点高新技术企业”、“国家高技术产业化示范工程”，并被信息产业部确定为中文语音交互技术标准工作组组长单位，牵头制定中文语音技术标准。
	</string>
	<string 
	    name="text_tts_cancel">停止</string>
	<string 
	    name="text_tts_clear">清空</string>
	<string 
	    name="text_tts_suspend">暂停</string>
	<string 
	    name="text_tts_resume">继续</string>
	<string
		name="text_tts">合成</string>
	<string
		name="tts_toast_format"
		formatted="false">当前缓冲进度为%d%%，播放进度为%d%%</string>
	<string
		name="app_id">537b6cb9</string>
    <string name="widget_name" translatable="false">VLC mini player</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="filebrowser_title">Select media to play</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_length">Length</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="append">Append</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="delete">Delete</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\' ?</string>
    <string name="ringtone_set">\'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">"Don't show this message again."</string>
    <string name="beta_warning">This is a beta version.\n\nThis version is NOT STABLE!\n\nDo NOT use, unless you know what you are doing.\n\nIt might kill your kitten and destroy your house.\nUse it at your own risk.\n\nHave Fun! :)</string>
    <string name="info_title">VLC Beta</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer files to your device or adjust your preferences.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat none/single/all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_horizontal">Fit horizontal</string>
    <string name="surface_fit_vertical">Fit vertical</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitles track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="one">1 channel\n</item>
        <item quantity="other">%1$d channels\n</item>
    </plurals>
    <string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
    <string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
    <string name="track_framerate_info">Frame rate: %1$.3f\n</string>
    <string name="tools">Tools</string>
    <string name="playback_speed">Playback speed</string>
    <string name="sleep_title">Sleep timer</string>
    <string name="sleep_cancel">Cancel sleep timer</string>
    <string name="jump_to_time">Jump to Time</string>
    <string name="subtitle_label">Add subtitle file</string>
    <string name="subtitle_select">Select subtitle file</string>
    <string name="no_file_picker_found">No file picker was found on the system.</string>
    <string name="open">Open</string>
    <string name="open_mrl">Open MRL</string>
    <string name="open_mrl_dialog_title">Open network stream</string>
    <string name="open_mrl_dialog_msg">Enter network MRL: e.g. http://, mms:// or rtsp://</string>
    <string name="error_not_compatible">Sorry, your device is currently not supported by this version of VLC for Android™.</string>
    <string name="error_problem">Sorry, VLC for Android had a problem loading and had to close.</string>
    <string name="error_message_is">The error message is (please mention this when debugging):\n</string>
    <string name="empty" translatable="false"></string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="speed_placeholder" translatable="false">1.00x</string>
    <string name="load_1_period" translatable="false">.</string>
    <string name="load_2_period" translatable="false">..</string>
    <string name="load_3_period" translatable="false">...</string>
    <string name="colon" translatable="false">:</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">&#8722;</string>
    <string name="encountered_error_title">Playback error</string>
    <string name="encountered_error_message">VLC encountered an error with this media.\nPlease try refreshing the media library.</string>
    <string name="invalid_location">The location %1$s cannot be played</string>
    <string name="app_name_full">VLC for Android™</string>
    <string name="licence">License</string>
    <string name="revision">Revision</string>
    <string name="about">About</string>
    <string name="about_text">VLC for Android™ is a port of VLC media player, the popular open source media player. The Android™ version can read most files and network streams.</string>
    <string name="compiled_by">This version of VLC is compiled by:</string>
    <string name="vlc_authors">VLC Authors.</string>
    <string name="about_link" translatable="false">        &lt;a href=&quot;http://www.videolan.org/vlc/&quot;&gt;http://www.videolan.org/vlc/&lt;/a&gt;</string>
</resources>