<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    		  xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:layout_width="fill_parent"
    		  android:layout_height="45dp"
    		  android:orientation="horizontal"
    		  android:gravity="center_vertical"
    		  android:background="@drawable/top_nav_bg"
    		  android:padding="5dp"
    		  >
    	
    		<LinearLayout 
			    		  android:id="@+id/linearFriendsOfTheatre"
			    		  android:layout_width="fill_parent"
			    		  android:layout_height="wrap_content"
			    		  android:orientation="horizontal"
			    		  android:layout_weight="1"
			    		  android:gravity="center"
			    		  >
    				<TextView 
    				    		android:layout_width="wrap_content"
    				    		android:layout_height="wrap_content"
    				    		android:text="@string/str_nav_friends"
    				    		style="@style/txt_top_nav"
    				    		/>
    	
 			</LinearLayout>
    		<LinearLayout 
			    		  android:id="@+id/linearLocalOfTheatre"
			    		  android:layout_width="fill_parent"
			    		  android:layout_height="wrap_content"
			    		  android:orientation="horizontal"
			    		  android:layout_weight="1"
			    		  android:gravity="center"
			    		  >
    				<TextView 
    				    		android:layout_width="wrap_content"
    				    		android:layout_height="wrap_content"
    				    		android:text="@string/str_nav_local_city"
    				    			style="@style/txt_top_nav"
    				    		/>
    	
 			</LinearLayout>
    		<LinearLayout 
			    		  android:id="@+id/linearCountryOfTheatre"
			    		  android:layout_width="fill_parent"
			    		  android:layout_height="wrap_content"
			    		  android:orientation="horizontal"
			    		  android:layout_weight="1"
			    		  android:gravity="center"
			    		  >
    				<TextView 
    				    		android:layout_width="wrap_content"
    				    		android:layout_height="wrap_content"
    				    		android:text="@string/str_nav_china"
    				    		style="@style/txt_top_nav"
    				    		/>
    	
 			</LinearLayout>
</LinearLayout>
